# VeloxQuant-MLX

./: .gitignore  .zenodo.json  BENCHMARK_RESULTS.md  CHANGELOG.md  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MEDIUM_BLOG.md  MEDIUM_BLOG_HANDS_ON.md  MEDIUM_BLOG_TURBOQUANT_METAL_KERNELS.md  NOTICE  OPTIMIZATION_FINDINGS.md  README.md  SECURITY.md  SUPPORT.md  benchmark_core.py  benchmark_mistral7b_v2.py  benchmark_phi4.py  benchmark_qwen25_32b.py  benchmark_qwen3_4b_v2.py  netlify.toml  new.md  pyproject.toml  requirements.txt  test.py  test_2bit_improvements.py  visualize_results.py
.bench_tmp/: full_falcon3_7b_fp16.json  full_falcon3_7b_rvq1.json  full_falcon3_7b_rvq2.json  full_falcon3_7b_tq2.json  full_falcon3_7b_tq3.json  full_falcon3_7b_tq4.json  full_gemma4_fp16.json  full_gemma4_rvq1.json  full_gemma4_rvq2.json  full_gemma4_tq2.json  full_gemma4_tq3.json  full_gemma4_tq4.json  full_llama31_8b_fp16.json  full_llama31_8b_rvq1.json  full_llama31_8b_rvq2.json  full_llama31_8b_tq2.json  full_llama31_8b_tq3.json  full_llama31_8b_tq4.json  full_mistral7b_fp16.json  full_mistral7b_rvq1.json  full_mistral7b_rvq2.json  full_mistral7b_tq2.json  full_mistral7b_tq3.json  full_mistral7b_tq4.json  full_phi4_fp16.json  full_phi4_rvq1.json  full_phi4_rvq2.json  full_phi4_tq2.json  full_phi4_tq3.json  full_phi4_tq4.json  full_qwen25_32b_fp16.json  full_qwen25_32b_rvq1.json  full_qwen25_32b_rvq2.json  full_qwen25_32b_tq2.json  full_qwen25_32b_tq3.json  full_qwen25_32b_tq4.json  full_qwen3_4b_fp16.json  full_qwen3_4b_rvq1.json  full_qwen3_4b_rvq2.json  full_qwen3_4b_tq2.json  (+73 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  validation_run.md
.github/workflows/: copyright-watch.yml  non-metal-unit.yml
benchmark_scripts/: a2ats_benchmark_results.json  amc_benchmark_results.json  benchmark_a2ats.py  benchmark_adakv.py  benchmark_amc.py  benchmark_cachegen.py  benchmark_cam.py  benchmark_chunkkv.py  benchmark_core.py  benchmark_curdkv.py  benchmark_falcon3_7b.py  benchmark_gear.py  benchmark_gemma4.py  benchmark_h2o.py  benchmark_keyformer.py  benchmark_kitty.py  benchmark_kivi.py  benchmark_knorm.py  benchmark_kv.py  benchmark_kvquant.py  benchmark_kvtc.py  benchmark_kvzip.py  benchmark_llama31_8b.py  benchmark_minicache.py  benchmark_mistral7b.py  benchmark_morphkv.py  benchmark_nestedkv.py  benchmark_nsn.py  benchmark_palu.py  benchmark_pyramidkv.py  benchmark_qfilters.py  benchmark_qwen2_vl.py  benchmark_qwen3_4b.py  benchmark_qwen3_8b.py  benchmark_sink.py  benchmark_skvq.py  benchmark_snapkv.py  benchmark_squeeze.py  benchmark_streaming_llm.py  benchmark_tova.py  (+30 more)
blogs/: README.md  kivi.md  metal-kernels.md  overview.md  results.md  tensorops-research.md  turboquant-metal-kernels.md
dist_preview/: index.html
dist_preview/docs/: 404.html  index.html  opensearch.xml  sitemap.xml
docs/: API_SURFACE.md  CI_AND_TESTING.md  MEMORY_CONSTRAINT_FINDINGS.md  PACKED_STORAGE_ROADMAP.md  VLM_EXPERIMENT_FINDINGS.md  VLM_SUPPORT_PLAN.md  validation-report.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/blog/: 2026-05-10-overview.md  2026-05-12-10-model-study.md  2026-05-17-results.md  2026-05-20-turboquant-metal-kernels.md  2026-05-25-metal-kernels.md  2026-05-28-hands-on.md  2026-06-10-kivi.md  2026-06-20-tensorops-research.md  authors.yml
docs-site/docs/: changelog.md  intro.mdx
docs-site/static/: mac-recommender-ruleset.json
figures/kivi/: results_summary.json
figures/llama31_8b/: run_log.txt
figures/metal/: results.json
landing/: index.html
landing/assets/: main.js  styles.css
mlx_kv_quant/: __init__.py  __main__.py
mlx_kv_quant/allocators/: __init__.py  ratequant.py
mlx_kv_quant/artifacts/: __init__.py  base.py  memory_store.py  npy_store.py
mlx_kv_quant/benchmarks/: attend_benchmark.py
mlx_kv_quant/cache/: __init__.py  base.py  polar_cache.py  qjl_cache.py  sliding_window_cache.py  turboquant_cache.py  turboquant_rvq_cache.py
mlx_kv_quant/cli/: benchmark.py  precompute.py
mlx_kv_quant/codebooks/: __init__.py  adaptive_codebook.py  base.py  precompute.py  scalar_codebook.py  strategies.py
mlx_kv_quant/core/: __init__.py  abstractions.py  constants.py  context.py  exceptions.py
mlx_kv_quant/dsa/: __init__.py  avl_tree.py  dag.py  heap.py  ring_buffer.py
mlx_kv_quant/handlers/: __init__.py  base.py  bit_pack_handler.py  normalization.py  outlier_split.py  polar_handler.py  qjl_residual_handler.py  rotation_handler.py  scalar_quant_handler.py  value_quant_handler.py
mlx_kv_quant/integration/: __init__.py  (+1 more)
paper/: CLAIMS_I_COULD_NOT_VERIFY.md  EVIDENCE_TABLE.md  IMPLEMENTATION_PROMPT_KEYFORMER.md  IMPLEMENTATION_PROMPT_XKV.md  NEW_METHOD_SURVEY.md  NEW_METHOD_SURVEY_V10.md  NEW_METHOD_SURVEY_V11.md  NEW_METHOD_SURVEY_V12.md  NEW_METHOD_SURVEY_V13.md  NEW_METHOD_SURVEY_V15.md  NEW_METHOD_SURVEY_V16.md  NEW_METHOD_SURVEY_V2.md  NEW_METHOD_SURVEY_V3.md  NEW_METHOD_SURVEY_V5.md  NEW_METHOD_SURVEY_V6.md  NEW_METHOD_SURVEY_V9.md  README.md  references.bib
scripts/: metal_dequant_proof.py  metal_end_to_end_smoke.py  metal_falcon3_unblock.py  metal_fused_sdpa_end_to_end.py  metal_fused_sdpa_proof.py  metal_fused_sdpa_proof_v2.py  metal_quantize_proof.py  metal_rabitq_attend_bench.py  metal_rabitq_encode_bench.py  plot_kivi.py  plot_metal_benchmarks.py  plot_optimization_journey.py  run_spectral_quant_eval.py  validate_kv_memory.py
turbo_quant_kb/: TURBOQUANT_IMPLEMENTATION_GUIDE.md  knowlgebase.md  mlx knowledgebase_tq.md
veloxquant_mlx/: __init__.py  __main__.py
(+526 files in other folders)
