[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-kv-quant"
version = "0.1.0"
description = "TurboQuant, PolarQuant, and QJL KV cache quantization for Apple Silicon MLX"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["quantization", "kv-cache", "llm", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.18",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist",
    "scipy>=1.11",  # used only in offline precompute (not at inference runtime)
    "psutil>=5.9",
]

[project.scripts]
mlx-kv-quant = "mlx_kv_quant.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_kv_quant*"]

[tool.pytest.ini_options]
testpaths = ["mlx_kv_quant/tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
