[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VeloxQuant-MLX"
version = "0.2.0"
description = "Fast KV cache quantization for Apple Silicon — TurboQuant, PolarQuant, and QJL in MLX"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" },
]
keywords = [
    "quantization", "kv-cache", "llm", "mlx", "apple-silicon",
    "turboquant", "polarquant", "qjl", "inference", "compression",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mlx>=0.18",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist",
    "scipy>=1.11",
    "psutil>=5.9",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/rajveer43/VeloxQuant-MLX"
Repository = "https://github.com/rajveer43/VeloxQuant-MLX"
"Bug Tracker" = "https://github.com/rajveer43/VeloxQuant-MLX/issues"

[project.scripts]
veloxquant = "mlx_kv_quant.__main__:main"
mlx-kv-quant = "mlx_kv_quant.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_kv_quant*"]

[tool.pytest.ini_options]
testpaths = ["mlx_kv_quant/tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
