[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VeloxQuant-MLX"
version = "0.22.0"
description = "Fast KV cache quantization for Apple Silicon — TurboQuant, RVQ, VecInfer (with Metal kernels), RateQuant, PolarQuant, SpectralQuant, CommVQ, RaBitQ, QJL, KIVI, KIVI-Sink, SVDq, Kitty, AdaKV-proxy, XQuant, KVQuant-NUQ, PALU, CacheGen, MiniCache, GEAR, ZipCache-adapted, SnapKV-adapted, StreamingLLM-adapted, H2O-adapted, and TOVA-adapted in MLX"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" },
]
maintainers = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" },
]
keywords = [
    "quantization", "kv-cache", "llm", "mlx", "apple-silicon",
    "turboquant", "ratequant", "rvq", "polarquant", "qjl",
    "rabitq", "commvq", "spectralquant", "vecinfer",
    "inference", "compression", "mixed-precision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mlx>=0.18",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist",
    "scipy>=1.11",
    "psutil>=5.9",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage           = "https://github.com/rajveer43/VeloxQuant-MLX"
Repository       = "https://github.com/rajveer43/VeloxQuant-MLX"
"Bug Tracker" = "https://github.com/rajveer43/VeloxQuant-MLX/issues"
Author        = "https://github.com/rajveer43"
Changelog     = "https://github.com/rajveer43/VeloxQuant-MLX/blob/master/CHANGELOG.md"
Documentation = "https://github.com/rajveer43/VeloxQuant-MLX#readme"

[project.scripts]
veloxquant = "veloxquant_mlx.__main__:main"
mlx-kv-quant = "veloxquant_mlx.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["veloxquant_mlx*"]

[tool.pytest.ini_options]
testpaths = ["veloxquant_mlx/tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
